# PDF-OCR-RENAME

./: .env  .gitignore  Dockerfile  Makefile  README.md  RenameMyPDF.py  app.py  config.yml  docker-compose.yaml  docker-compose.yml  dockerfile  dockerfile.alpine  dockerfile.ocr  dockerfile.ren  dockerfile.renamer  dockerfile.ubuntu  pyproject.toml  renamemypdf.py  requirements.txt  run-renamer.sh  run-watcher.sh  run.sh  watcher.py
docker/: docker-compose.yaml
src/: app.py
