[tool.poetry]
name = "pdf-ocr-rename"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pikepdf = "^8.15.1"
ocrmypdf = "^16.2.0"
pyyaml = "^6.0.1"
deskew = "^1.5.1"
watchdog = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
